--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,15 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #636060;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:black;
+  /* background-image: linear-gradient(black,red); */
 }
 
 .App-link {
@@ -35,4 +36,14 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+
+button {
+  font-size: 25px;
+  width: 30%;
+  padding:1rem;
+  font:bold;
+  background-color:#9e9a9a;
+  box-shadow:2px;
 }
